--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 </head>
 <body>
 <p>
-	<a href="http://javascript:popUp('gallery.html');">first</a> 
+	<a href="http://wahaha1033.github.io/example.html;">first</a> 
 </p>
 <p>
-	<a href="http://#" onclick="popUp('example.html'); return false;">second</a>
+	<a href="http://wahaha1033.github.io/gallery.html; return false;">second</a>
 	</p>
 	
 	<p>
-	<a href="http://wahaha1033.github.io/there/gallery.html ">third</a> 
+	<a href="http://wahaha1033.github.io/third/third.html ">third</a> 
 </p>
 	<p>
-	<a href="http://wahaha1033.github.io/four/gallery.html  ">fourth</a> 
+	<a href="http:// wahaha1033.github.io/fouth/fouth.html ">fourth</a> 
 </p>
 <script src="scripts/open.js"></script>
 </body>
-</html>
+</html>
