--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <title>首页</title>
 </head>
 <body>
-<p>
-	<a href="http://wahaha1033.github.io/example.html;">first</a> 
-</p>
-<p>
-	<a href="http://wahaha1033.github.io/gallery.html; return false;">second</a>
-	</p>
+	<h1>my js text</h1>
+	<ul>
+	<li><a href="http://wahaha1033.github.io/example.html">first</a> 
+</li>
+<li>
+	<a href="http://wahaha1033.github.io/gallery.html">second</a>
+	</li>
 	
-	<p>
+	<li>
 	<a href="http://wahaha1033.github.io/third/third.html ">third</a> 
-</p>
-	<p>
-	<a href="http:// wahaha1033.github.io/fouth/fouth.html ">fourth</a> 
-</p>
-<script src="scripts/open.js"></script>
+</li>
+	<li>
+	<a href="http://wahaha1033.github.io/fouth/fouth.html ">fourth</a> 
+</li>
+</ul>
 </body>
 </html>
