--- a/example.html
+++ b/example.html
@@ -1,11 +1,8 @@
 <html>
 <head>
-<title>³¬Á´½ÓÊµÏÖ</title>
+<title></title>
 </head>
 <body>
-<p><a href="javascript:popUp('http://www.baidu.com');">ewrtwer</a> 
-</p>
-
 <p><a href="http://www.baidu.com/" onclick="popUp(this.getAttribute('href')); return false;">eqweqwe</a></p>
 <p><a href="http://www.baidu.com/" onclick="popUp(this.href); return false;">qweqwe</a></p>
 <p><a href="http://www.baidu.com/" class="popup">eqweqw</a>    
