--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
-﻿<html>
+<html>
 <head>
-<title>首页</title>
+<meta charset="utf-8">
+<title>wdy</title>
 </head>
 <body>
-	<h1>my js text</h1>
-	<ul>
-	<li><a href="http://wahaha1033.github.io/example.html">first</a> 
-</li>
-<li>
-	<a href="http://wahaha1033.github.io/gallery.html">second</a>
-	</li>
-	
-	<li>
-	<a href="http://wahaha1033.github.io/third/third.html ">third</a> 
-</li>
-	<li>
-	<a href="http://wahaha1033.github.io/fouth/fouth.html ">fourth</a> 
-</li>
-</ul>
+  <h1>Snapshots</h1>
+  <ul>
+     <li>
+       <a href="tupian/fireworks.jpg" onclick="showPic(this);return flase;title="A fireworks display">Fireworks</a>
+     </li>
+     <li>
+       <a href="tupian/coffee.jpg"onclick="showPic(this);return flase; title="A cup of black coffee">Coffee</a>
+     </li>
+     <li>
+       <a href="tupian/rose.jpg"onclick="showPic(this);return flase; title="A red,red rose">Rose</a>
+     </li>
+     <li>
+       <a href="tupian/bigben.jpg"onclick="showPic(this);return flase; title="The famous clock">Big Ben</a>
+     </li>
+ </ul>
+<img id="placeholder" src="tupian/placeholder.jpg" alt="my image gallery">
+<p id="description">Choose an image.</p>
+<script type="text/javascript" src="showPic.js"></script>
+
+
 </body>
+
+
+
+
+
 </html>
