--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,9 @@
 	<li>
 	<a href="http://wahaha1033.github.io/fouth/fouth.html ">fourth</a> 
 </li>
+        <li>
+		<a href="http://wahaha1033.github.io/sixth/sixth.html">sixth</a>
+		</li>
 </ul>
 </body>
 </html>
